Changed Ads to Announcement and added action to profile setting item

--- a/app/src/main/res/layout/fragment_view_announcements_list.xml
+++ b/app/src/main/res/layout/fragment_view_announcements_list.xml
@@ -10,7 +10,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ViewAdsList">
+        tools:context=".ViewAnnouncementsList">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/ads_list_rv"
