--- a/app/src/main/res/layout/fragment_view_announcement_info.xml
+++ b/app/src/main/res/layout/fragment_view_announcement_info.xml
@@ -15,7 +15,7 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context=".ViewAdInfo">
+            tools:context=".ViewAnnouncementInfo">
 
 
             <TextView
