--- a/app/src/main/res/layout/fragment_user_signup.xml
+++ b/app/src/main/res/layout/fragment_user_signup.xml
@@ -35,6 +35,21 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:id="@+id/user_login_email_hint"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:text="@string/signup_id_hint_resident"
+                android:gravity="center_horizontal"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/sign_up_header_tv" />
+
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/user_login_id_txtInput"
                 android:layout_width="match_parent"
@@ -45,7 +60,7 @@
                 android:layout_marginRight="16dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/sign_up_header_tv">
+                app:layout_constraintTop_toBottomOf="@id/user_login_email_hint">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/user_login_id_et"
