--- a/app/src/main/res/layout/fragment_edit_ad_details.xml
+++ b/app/src/main/res/layout/fragment_edit_ad_details.xml
@@ -45,6 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:hint="Description"
+            android:lines="3"
             android:maxLines="7"
             app:layout_constraintLeft_toLeftOf="@id/ad_post_resident_et"
             app:layout_constraintRight_toRightOf="@id/ad_post_resident_et"
@@ -61,7 +62,7 @@
             android:visibility="visible"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/request_desc_et" />
+            app:layout_constraintBottom_toBottomOf="parent" />
 
 
     </android.support.constraint.ConstraintLayout>
