--- a/app/src/main/res/layout/fragment_edit_apartment_details.xml
+++ b/app/src/main/res/layout/fragment_edit_apartment_details.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".EditApartmentDetails">
 
-    <!-- TODO: Add upload picture control here on top -->
+    <!-- Add upload picture control here on top - to be implemented later -->
 
     <EditText
         android:id="@+id/apt_name_et"
@@ -56,22 +56,23 @@
         android:id="@+id/submit_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/apt_notes_et"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:visibility="visible"
+        android:layout_margin="32dp"
         android:text="Submit"
-        android:layout_margin="32dp"/>
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
+    <!-- To be implemented later -->
     <Button
         android:id="@+id/update_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/submit_btn"
+        android:layout_margin="16dp"
+        android:text="Update"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:visibility="visible"
-        android:text="Update"
-        android:layout_margin="32dp"/>
+        app:layout_constraintTop_toBottomOf="@id/submit_btn" />
 
 </android.support.constraint.ConstraintLayout>
