--- a/app/src/main/res/layout/fragment_edit_maintenance_details.xml
+++ b/app/src/main/res/layout/fragment_edit_maintenance_details.xml
@@ -23,7 +23,7 @@
         <android.support.constraint.Group
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:constraint_referenced_ids="request_update_btn"
+            app:constraint_referenced_ids=""
             android:id="@+id/existing_req_group" />
 
         <!-- change this to request type -->
@@ -101,21 +101,23 @@
             android:background="@color/colorAccent"
             android:text="Submit"
             android:visibility="visible"
+            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/request_update_btn"
-            app:layout_constraintTop_toBottomOf="@id/request_comments_et" />
+            app:layout_constraintRight_toLeftOf="@id/cancel_btn"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
+        <!-- to be implemented later -->
         <Button
-            android:id="@+id/request_update_btn"
+            android:id="@+id/cancel_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:background="@color/colorAccent"
-            android:text="Update"
-            android:visibility="visible"
+            android:text="Cancel"
+            android:visibility="gone"
             app:layout_constraintLeft_toRightOf="@id/request_submit_btn"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/request_comments_et" />
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
