--- a/app/src/main/res/layout/fragment_edit_resident_details.xml
+++ b/app/src/main/res/layout/fragment_edit_resident_details.xml
@@ -15,7 +15,7 @@
         tools:context=".EditResidentDetails">
 
         <ImageView
-            android:id="@+id/resident_photo"
+            android:id="@+id/resident_photo_img"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:scaleType="centerCrop"
@@ -25,81 +25,74 @@
             android:layout_width="match_parent"
             android:layout_height="75dp"
             android:background="@drawable/fade_gradient_bottom"
-            app:layout_constraintBottom_toBottomOf="@id/resident_photo" />
+            app:layout_constraintBottom_toBottomOf="@id/resident_photo_img" />
 
         <EditText
-            android:id="@+id/resident_first_name"
+            android:id="@+id/resident_fname_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:hint="First Name"
-            app:layout_constraintTop_toBottomOf="@id/resident_photo" />
+            app:layout_constraintTop_toBottomOf="@id/resident_photo_img" />
 
         <EditText
-            android:id="@+id/resident_last_name"
+            android:id="@+id/resident_lname_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:hint="Last Name"
-            app:layout_constraintTop_toBottomOf="@id/resident_first_name" />
+            app:layout_constraintTop_toBottomOf="@id/resident_fname_et" />
 
         <Spinner
-            android:id="@+id/resident_gender"
+            android:id="@+id/resident_gender_spn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:entries="@array/gender_list"
-            app:layout_constraintTop_toBottomOf="@id/resident_last_name" />
+            app:layout_constraintTop_toBottomOf="@id/resident_lname_et" />
+
+
+        <Spinner
+            android:id="@+id/resident_apt_spn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            app:layout_constraintTop_toBottomOf="@id/resident_gender_spn" />
 
         <EditText
-            android:id="@+id/resident_email_id"
+            android:id="@+id/resident_email_id_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:hint="Email"
             android:inputType="textEmailAddress"
-            app:layout_constraintTop_toBottomOf="@id/resident_gender" />
+            app:layout_constraintTop_toBottomOf="@id/resident_apt_spn" />
 
         <EditText
-            android:id="@+id/resident_phone"
+            android:id="@+id/resident_phone_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:hint="Phone"
             android:inputType="phone|number"
-            app:layout_constraintTop_toBottomOf="@id/resident_email_id" />
+            app:layout_constraintTop_toBottomOf="@id/resident_email_id_et" />
 
-        <!--
-        Generate random password when Add is clicked
-        https://stackoverflow.com/questions/42110897/how-to-generate-random-alpha-and-numeric-string
-        -->
+
         <Button
             android:id="@+id/add_resident_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:background="@color/colorAccent"
-            android:text="Add"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/update_resident_btn"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/resident_phone" />
-
-        <Button
-            android:id="@+id/update_resident_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:background="@color/colorAccent"
-            android:text="Update"
+            android:text="Submit"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
-            app:layout_constraintStart_toEndOf="@+id/add_resident_btn"
-            app:layout_constraintTop_toBottomOf="@id/resident_phone" />
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent" />
 
+
+        <!-- To be implemented later -->
         <Button
             android:id="@+id/cancel_btn"
             android:layout_width="wrap_content"
@@ -107,10 +100,10 @@
             android:layout_margin="16dp"
             android:background="@color/colorAccent"
             android:text="Cancel"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/update_resident_btn"
-            app:layout_constraintTop_toBottomOf="@id/resident_phone" />
+            app:layout_constraintStart_toEndOf="@+id/add_resident_btn" />
 
     </android.support.constraint.ConstraintLayout>
 
