--- a/app/src/main/res/layout/fragment_view_resident_info.xml
+++ b/app/src/main/res/layout/fragment_view_resident_info.xml
@@ -72,8 +72,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:textSize="16sp"
-                    app:layout_constraintEnd_toEndOf="@id/resident_lname_tv"
-                    app:layout_constraintStart_toStartOf="@id/resident_lname_tv"
+                    app:layout_constraintEnd_toEndOf="@id/resident_fname_tv"
+                    app:layout_constraintStart_toStartOf="@id/resident_fname_tv"
                     app:layout_constraintTop_toBottomOf="@id/resident_lname_tv"
                     tools:text="Gender" />
 
