--- a/app/src/main/res/layout/fragment_view_resident_info.xml
+++ b/app/src/main/res/layout/fragment_view_resident_info.xml
@@ -21,87 +21,110 @@
             tools:context=".ViewResidentInfo">
 
     -->
-            <android.support.constraint.ConstraintLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-                <ImageView
-                    android:id="@+id/resident_photo"
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:scaleType="centerCrop"
-                    tools:src="@tools:sample/backgrounds/scenic" />
+        <ImageView
+            android:id="@+id/resident_photo"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:scaleType="centerCrop"
+            tools:src="@tools:sample/backgrounds/scenic" />
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="75dp"
-                    android:background="@drawable/fade_gradient_bottom"
-                    app:layout_constraintBottom_toBottomOf="@id/resident_photo" />
-
-
-                <TextView
-                    android:id="@+id/resident_fname_tv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:textSize="16sp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/resident_photo"
-                    tools:text="First Name" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="75dp"
+            android:background="@drawable/fade_gradient_bottom"
+            app:layout_constraintBottom_toBottomOf="@id/resident_photo" />
 
 
-                <TextView
-                    android:id="@+id/resident_lname_tv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:textSize="16sp"
-                    app:layout_constraintEnd_toEndOf="@id/resident_fname_tv"
-                    app:layout_constraintStart_toStartOf="@id/resident_fname_tv"
-                    app:layout_constraintTop_toBottomOf="@id/resident_fname_tv"
-                    tools:text="Last Name" />
+        <TextView
+            android:id="@+id/resident_fname_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:textSize="16sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/resident_photo"
+            tools:text="First Name" />
 
 
-                <TextView
-                    android:id="@+id/resident_gender_tv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:textSize="16sp"
-                    app:layout_constraintEnd_toEndOf="@id/resident_fname_tv"
-                    app:layout_constraintStart_toStartOf="@id/resident_fname_tv"
-                    app:layout_constraintTop_toBottomOf="@id/resident_lname_tv"
-                    tools:text="Gender" />
+        <TextView
+            android:id="@+id/resident_lname_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/resident_fname_tv"
+            tools:text="Last Name" />
 
-                <TextView
-                    android:id="@+id/resident_email_tv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:autoLink="email"
-                    android:textSize="16sp"
-                    app:layout_constraintEnd_toEndOf="@id/resident_gender_tv"
-                    app:layout_constraintStart_toStartOf="@id/resident_gender_tv"
-                    app:layout_constraintTop_toBottomOf="@id/resident_gender_tv"
-                    tools:text="email@email.com" />
 
-                <TextView
-                    android:id="@+id/resident_phone_tv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:autoLink="phone"
-                    android:textSize="16sp"
-                    app:layout_constraintEnd_toEndOf="@id/resident_email_tv"
-                    app:layout_constraintStart_toStartOf="@id/resident_email_tv"
-                    app:layout_constraintTop_toBottomOf="@id/resident_email_tv"
-                    tools:text="+1 (555)-555-5555" />
+        <TextView
+            android:id="@+id/resident_gender_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/resident_lname_tv"
+            tools:text="Gender" />
 
-            </android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/resident_email_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:autoLink="email"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/resident_gender_tv"
+            tools:text="email@email.com" />
+
+        <TextView
+            android:id="@+id/resident_phone_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:autoLink="phone"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/resident_email_tv"
+            tools:text="+1 (555)-555-5555" />
+
+        <TextView
+            android:id="@+id/resident_apt_header_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:autoLink="phone"
+            android:textSize="16sp"
+            android:text="Apartment: "
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/resident_phone_tv" />
+
+        <TextView
+            android:id="@+id/resident_apt_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
+            android:autoLink="phone"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/resident_apt_header_tv"
+            app:layout_constraintTop_toTopOf="@id/resident_apt_header_tv"
+            tools:text="@tools:sample/lorem" />
+
+    </android.support.constraint.ConstraintLayout>
 
     <!--
 
